Fixed layout issues

--- a/create.css
+++ b/create.css
@@ -1,9 +1,9 @@
 .createpage__form {
   display: flex;
   flex-direction: column;
-  margin: 10px auto;
+  margin: 10px;
   flex-wrap: wrap;
-  padding: 1.5rem;
+  padding: 1rem;
   border: 1px dotted var(--darkpetrol);
   border-radius: 10px;
   position: relative;
@@ -23,16 +23,16 @@
   font-size: 0.9rem;
   padding: 2px;
   position: absolute;
-  left: 190px;
+  left: 210px;
   color: var(--silver);
 }
 
 .create__output1 {
-  top: 36px;
+  top: 30px;
 }
 
 .create__output2 {
-  top: 220px;
+  top: 210px;
 }
 
 .createpage__textarea {
